--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <li><a href="#">Products</a></li>
       <li><a href="#">Contacts</a></li>
       <li><a href="#">About us</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">About us</a></li>
     </ul>
   </body>
 </html>
