--- a/cat.html
+++ b/cat.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Hello from catalog</h1>
     <p>First paragraph</p>
     <p>Second paragraph</p>
-</body>
-
+    <p>Third paragraph</p>
+  </body>
 </html>
