--- a/practice.html
+++ b/practice.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
-    <h1> Hello</h1>
-        <div>
-            <p>Dmytro have a nice day :)</p>
-        </div>
-    
-</body>
+  </head>
+  <body>
+    <h1>Hello</h1>
+    <div>
+      <p>Dmytro have a nice day :)</p>
+    </div>
+    <h1>Hello from catalog</h1>
+    <p>First paragraph</p>
+    <p>Second paragraph</p>
+    <p>Thanks you too=))</p>
+  </body>
 </html>
