--- a/practice.html
+++ b/practice.html
@@ -15,5 +15,7 @@
     <p>First paragraph</p>
     <p>Second paragraph</p>
     <p>Thanks you too=))</p>
+    <p>Thanks you too=))</p>
+    <p>Thanks you too=))</p>
   </body>
 </html>
