--- a/practice.html
+++ b/practice.html
@@ -11,6 +11,7 @@
     <h1> Hello</h1>
         <div>
             <p>Dmytro have a nice day :)</p>
+            <p>have a nice day you too:)</p>
         </div>
     
 </body>
